--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,18 +14,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal" >
 
         <Button
+            android:id="@+id/undo_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="lalala"/>
+            android:text="undo"/>
 
         <Button
+            android:id="@+id/redo_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="lalala2"/>
+            android:text="redo"/>
 
     </LinearLayout>
 
@@ -104,7 +105,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/radioGroup"
                 android:layout_marginTop="16dp"
-                android:onClick="HandleClick"
+                android:onClick="handleClick"
                 android:text="Convert"/>
 
             <TextView
